--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -26,7 +26,7 @@ a:hover {
   padding: 40px;
   max-width: 600px;
   margin: 40px auto;
-  border-radius: 4px;
+  border-radius: 15px;
   box-shadow: 0 4px 10px 4px rgba(152, 152, 152, 0.3);
 }
 
@@ -134,6 +134,7 @@ textarea {
 .field-wrap {
   position: relative;
   margin-bottom: 40px;
+  max-height: 40px;
 }
 
 .top-row:after {
